css styles dir created with reset & linked to html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UserCard</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Profile Card component</title>
 </head>
 
 <body>
+    <div class="container"></div>
+    <div class="cercle1"></div>
+    <div class="cercle2"></div>
+    <div class="usercard"></div>
 
 
 
