--- a/index.html
+++ b/index.html
@@ -10,11 +10,35 @@
 
 <body>
     <div class="container"></div>
-    <div class="cercle1"></div>
-    <div class="cercle2"></div>
-    <div class="usercard"></div>
+    <div class="cercle1"><img src="./assets/images/top-circle.svg" alt="top circle"></div>
+    <div class="cercle2"><img src="./assets/images/bottom-circle.svg" alt="bottom circle"></div>
 
-
+    <article class="card">
+        <header class="card_header">
+            <img src="./assets/images/card-pattern.svg" alt="pattern card">
+            <img src="./assets/images/victor.jpg" alt="profile image">
+        </header>
+        <section class="card__body">
+            <p class="card__text">Victor Crest
+                <span class="card__text card__text--light">26</span>
+            </p>
+            <p class="card__text card__text--light">London</p>
+        </section>
+        <footer class="card__footer">
+            <div class="card__stats">
+                <p class="card__number">80K</p>
+                <p class="card__text card card__text--light">Followers</p>
+            </div>
+            <div class="card__stats">
+                <p class="card__number">803K</p>
+                <p class="card__text card card__text--light">Likes</p>
+            </div>
+            <div class="card__stats">
+                <p class="card__number">1.4K</p>
+                <p class="card__text card card__text--light">Photos</p>
+            </div>
+        </footer>
+    </article>
 
 
 </body>
