--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 
 <body>
-    <div class="container"></div>
-    <div class="cercle1"><img src="./assets/images/top-circle.svg" alt="top circle"></div>
-    <div class="cercle2"><img src="./assets/images/bottom-circle.svg" alt="bottom circle"></div>
+    <img src="./assets/images/top-circle.svg" alt="top circle" class="bg-image bg-image--top" />
+    <img src="./assets/images/bottom-circle.svg" alt="bottom circle" class="bg-image bg-image--bottom" />
 
     <article class="card">
-        <header class="card_header">
-            <img src="./assets/images/card-pattern.svg" alt="pattern card">
-            <img src="./assets/images/victor.jpg" alt="profile image">
+        <header class="card__header">
+            <img src="./assets/images/card-pattern.svg" alt="pattern card" class="card__header-image" />
+            <img src="./assets/images/victor.jpg" alt="profile image" class="card__header-profile" />
         </header>
         <section class="card__body">
             <p class="card__text">Victor Crest
@@ -27,15 +26,15 @@
         <footer class="card__footer">
             <div class="card__stats">
                 <p class="card__number">80K</p>
-                <p class="card__text card card__text--light">Followers</p>
+                <p class="card__text card__text--light">Followers</p>
             </div>
             <div class="card__stats">
                 <p class="card__number">803K</p>
-                <p class="card__text card card__text--light">Likes</p>
+                <p class="card__text card__text--light">Likes</p>
             </div>
             <div class="card__stats">
                 <p class="card__number">1.4K</p>
-                <p class="card__text card card__text--light">Photos</p>
+                <p class="card__text card__text--light">Photos</p>
             </div>
         </footer>
     </article>
